<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.domi.fightlapyapp.MainActivity">

    <Button
        android:id="@+id/button_lista_zaw"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:layout_marginTop="32dp"
        android:onClick="wyborWydarzenia"
        android:text="@string/wybor_wydarzen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dodaj_zaw" />

    <Button
        android:id="@+id/button_dodaj_zaw"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        android:onClick="wyborZawodniczki"
        android:text="@string/wybor_zawodniczki"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zapisz_zawodniczke_na_wydarzenie"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:layout_marginTop="32dp"
        android:onClick="zapisZawodniczkiNaWydarzenie"
        android:text="@string/zapisz_zawodniczke_wydarzenie"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lista_zaw" />

</android.support.constraint.ConstraintLayout>
